--- a/startpage/index.html
+++ b/startpage/index.html
@@ -18,61 +18,64 @@
 
     <div id="search-query">
         <form method="get" action="https://google.com/search">
-            <input type="text" name="query" value="" placeholder="search google" size="120">
+            <input type="text" name="query" value="" placeholder="search google">
 
         </form>
     </div>
 
-    <h1 id="reddit-header">
-        <a href="https://reddit.com">reddit</a>
-    </h1>
+    <div class="header-links">
+        <ul>
+            <li><h1 id="reddit-header"><a href="https://reddit.com">reddit</a></h1></li>
+            <li><h1 id="sweclockers-header"><a href="https://sweclockers.com">sweclockers</a></h1></li>
+            <li><h1 id="youtube-header"><a href="https://youtube.com">youtube</a></h1></li>
+        </ul>
+    </div>
 
-    <h1 id="sweclockers-header">
-        <a href="https://sweclockers.com">sweclockers</a>
-    </h1>
+    <!--<div id="box-links">
+        <ul class="left">
+            <li><a href="https://reddit.com">reddit</a></li>
+            <li><a href="https://sweclockers.com">sweclockers</a></li>
+            <li><a href="https://youtube.com">youtube</a></li>
+        </ul>
 
-    <h1 id="youtube-header">
-        <a href="https://youtube.com">youtube</a>
-    </h1>
+        <ul class="center">
+            <li><a href="https://facebook.com">facebook</a></li>
+            <li><a href="https://massdrop.com">massdrop</a></li>
+            <li><a href="https://netflix.com">netflix</a></li>
+        </ul>
 
-    <div id="left">
-        <ul style="list-style-type: none;">
+        <ul class="right">
+            <li><a href="https://amazon.co.uk">amazon</a></li>
+            <li><a href="https://aliexpress.com">aliexpress</a></li>
+            <li><a href="https://ebay.co.uk">ebay</a></li>
+        </ul>
+    </div>-->
+
+    <div id="left-links">
+        <ul>
             <li><a href="https://reddit.com">reddit</a></li>
             <li><a href="https://sweclockers.com">sweclockers</a></li>
             <li><a href="https://youtube.com">youtube</a></li>
         </ul>
     </div>
 
-    <div id="center">
-        <ul style="list-style-type: none;">
-            <li><a href="https://netflix.com">netflix</a></li>
+    <div id="center-links">
+        <ul>
             <li><a href="https://facebook.com">facebook</a></li>
             <li><a href="https://massdrop.com">massdrop</a></li>
+            <li><a href="https://netflix.com">netflix</a></li>
         </ul>
     </div>
 
-    <div id="right">
-        <ul style="list-style-type: none;">
+    <div id="right-links">
+        <ul>
+            <li><a href="https://amazon.co.uk">amazon</a></li>
             <li><a href="https://aliexpress.com">aliexpress</a></li>
             <li><a href="https://ebay.co.uk">ebay</a></li>
-            <li><a href="https://amazon.co.uk">amazon</a></li>
         </ul>
     </div>
 
-    <div class="dropdown-other">
-        <button onclick="toggleOther()" class="dropbutton">other</button>
-        <div id="dropdown-content-id" class="dropdown-content">
-            <a href="https://github.com">github</a>
-            <a href="https://dotshare.it">dotshare</a>
-            <a href="https://aliexpress.com">aliexpress</a>
-            <a href="https://amazon.co.uk">amazon</a>
-            <a href="https://ebay.co.uk">ebay</a>
-            <a href="https://inet.se">inet</a>
-            <a href="https://medium.com">medium</a>
-            <a href="https://twitch.tv">twitch</a>
-        </div>
     </div>
-
 
     <div id="bottom-row">
         <ul>
