--- a/startpage/index.html
+++ b/startpage/index.html
@@ -24,58 +24,62 @@
     </div>
 
     <div class="header-links">
-        <ul>
-            <li><h1 id="reddit-header"><a href="https://reddit.com">reddit</a></h1></li>
-            <li><h1 id="sweclockers-header"><a href="https://sweclockers.com">sweclockers</a></h1></li>
-            <li><h1 id="youtube-header"><a href="https://youtube.com">youtube</a></h1></li>
-        </ul>
+        <p><h1 id="reddit-header"><a href="https://reddit.com">reddit</a></h1></p>
+        <p><h1 id="sweclockers-header"><a href="https://sweclockers.com">sweclockers</a></h1></p>
+        <p><h1 id="youtube-header"><a href="https://youtube.com">youtube</a></h1></p>
     </div>
 
-    <!--<div id="box-links">
-        <ul class="left">
-            <li><a href="https://reddit.com">reddit</a></li>
-            <li><a href="https://sweclockers.com">sweclockers</a></li>
-            <li><a href="https://youtube.com">youtube</a></li>
-        </ul>
+    <div class="box-links">
+        <div id="left-links">
+            <ul>
+                <li><p><a href="https://reddit.com">reddit</a></p></li>
+                <li><p><a href="https://sweclockers.com">sweclockers</a></p></li>
+                <li><p><a href="https://youtube.com">youtube</a></p></li>
+            </ul>
+        </div>
 
-        <ul class="center">
-            <li><a href="https://facebook.com">facebook</a></li>
-            <li><a href="https://massdrop.com">massdrop</a></li>
-            <li><a href="https://netflix.com">netflix</a></li>
-        </ul>
+        <div id="center-links">
+            <ul>
+                <li><p><a href="https://facebook.com">facebook</a></p></li>
+                <li><p><a href="https://massdrop.com">massdrop</a></p></li>
+                <li><p><a href="https://netflix.com">netflix</a></p></li>
+            </ul>
+        </div>
 
-        <ul class="right">
-            <li><a href="https://amazon.co.uk">amazon</a></li>
-            <li><a href="https://aliexpress.com">aliexpress</a></li>
-            <li><a href="https://ebay.co.uk">ebay</a></li>
-        </ul>
+        <div id="right-links">
+            <ul>
+                <li><p><a href="https://amazon.co.uk">amazon</a></p></li>
+                <li><p><a href="https://aliexpress.com">aliexpress</a></p></li>
+                <li><p><a href="https://ebay.co.uk">ebay</a></p></li>
+            </ul>
+        </div>
+    </div>
+
+    <!--<div class="box-links">
+        <div id="left-links">
+            <ul>
+                <li><a href="https://reddit.com">reddit</a></li>
+                <li><a href="https://sweclockers.com">sweclockers</a></li>
+                <li><a href="https://youtube.com">youtube</a></li>
+            </ul>
+        </div>
+
+        <div id="center-links">
+            <ul>
+                <li><a href="https://facebook.com">facebook</a></li>
+                <li><a href="https://massdrop.com">massdrop</a></li>
+                <li><a href="https://netflix.com">netflix</a></li>
+            </ul>
+        </div>
+
+        <div id="right-links">
+            <ul>
+                <li><a href="https://amazon.co.uk">amazon</a></li>
+                <li><a href="https://aliexpress.com">aliexpress</a></li>
+                <li><a href="https://ebay.co.uk">ebay</a></li>
+            </ul>
+        </div>
     </div>-->
-
-    <div id="left-links">
-        <ul>
-            <li><a href="https://reddit.com">reddit</a></li>
-            <li><a href="https://sweclockers.com">sweclockers</a></li>
-            <li><a href="https://youtube.com">youtube</a></li>
-        </ul>
-    </div>
-
-    <div id="center-links">
-        <ul>
-            <li><a href="https://facebook.com">facebook</a></li>
-            <li><a href="https://massdrop.com">massdrop</a></li>
-            <li><a href="https://netflix.com">netflix</a></li>
-        </ul>
-    </div>
-
-    <div id="right-links">
-        <ul>
-            <li><a href="https://amazon.co.uk">amazon</a></li>
-            <li><a href="https://aliexpress.com">aliexpress</a></li>
-            <li><a href="https://ebay.co.uk">ebay</a></li>
-        </ul>
-    </div>
-
-    </div>
 
     <div id="bottom-row">
         <ul>
